--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "doctrine/orm": "^3.2",
         "fakerphp/faker": "^1.23",
         "hautelook/alice-bundle": "^2.14",
+        "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
         "symfony/mailer": "7.1.*",
+        "symfony/mercure-bundle": "^0.3.9",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
