--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,12 +16,13 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                default_target_path: page_home
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
-
+                target: app_login
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
@@ -29,16 +30,26 @@ security:
                 # by default, the feature is enabled by checking a checkbox in the
                 # login form, uncomment the following line to always enable it.
                 #always_remember_me: true
+                
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_MODERATOR
+        ROLE_MODERATOR: ROLE_PREMIUM_USER
+        ROLE_PREMIUM_USER: ROLE_CHALLENGE_CREATOR
+        ROLE_CHALLENGE_CREATOR: ROLE_USER
+        ROLE_USER: ROLE_BAN
+        
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+    
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
